# pybrd

./: Dockerfile  README.md  fly.toml  pyproject.toml  setup.toml
src/: main.py
src/eventbrite/: client.py  index.py  provider.py
src/pybr2023/templates/: auth_email_missing.md  auth_failed.md  auth_succeeded.md  auth_user_authenticated.md  auth_user_not_in_server.md
src/pybr2024/templates/: auth_email_missing.md  auth_failed.md  auth_user_authenticated.md  auth_user_not_in_server.md
src/pybrd/: bot.py  config.py  setup_python_brasil.py  templates.py
src/pybrd/auth/: cog.py  provider.py
src/pybrd/auth/providers/eventbrite/: __init__.py  index.py  provider.py
